@startuml
'https://plantuml.com/class-diagram
class Solution45 {
    String word
    String name

    Input input = new Input()
    Replace replace = new Replace()
    word = input.getInput()
    word = replace.replaceWord(word)

    Output output = new Output()
    output.outputFile(word, name)

}
Solution45 --o Input
class Input {
    +getInput()
}
Solution45 --o Replace

class Replace {
  +replaceWord()
}

Solution45 --o Output
class Output {
    +outputFile()
}
@enduml